# notebooks

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Brewfile  CHANGELOG.md  README.md  problem_intelligence_tool.py  pyproject.toml  ruff.toml
.claude/commands/: fleet.md  update-model.md
.github/workflows/: build.yml
cartographer/: __init__.py  analyze.py  cli.py  detect.py  render.py  scan.py
devops/: apt-packages.txt  health-check.md  notification-routing.md
devops/linux/: openclaw-backup-verify.timer  openclaw-health-check.timer  openclaw-workspace-backup.service  openclaw-workspace-backup.timer
devops/mac/: ai.openclaw.backup-verify.plist  ai.openclaw.workspace-backup.plist
docs/plans/: vapi-phone-skill.md
examples/: Analyze_a_Video_Classification.ipynb
lattice/: __init__.py  cell.py  executor.py  graph.py  notebook.py  serialize.py
memory/decisions/: .gitkeep
memory/people/: .gitkeep
memory/projects/: .gitkeep
memory/topics/: .gitkeep
rankforge/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package.json  tailwind.config.ts
rankforge/prisma/: schema.prisma  seed.ts
rankforge/src/: middleware.ts
skills/asana/: SKILL.md  asana
skills/fireflies/: SKILL.md  (+1 more)
templates/: AGENTS.md  BOOT.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
tests/: __init__.py  test_analyze.py  test_asana.py  test_cell.py  test_detect.py  test_fireflies.py  test_followupboss.py  test_graph.py  test_limitless.py  test_notebook.py  test_parallel.py  test_quo.py  test_render.py  test_scan.py  test_serialize.py
(+49 files in other folders)
