[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cartographer"
version = "0.1.0"
description = "Scan a codebase and generate a structured project map"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
cartographer = "cartographer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
